; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/lib/cifra/extr_chacha20.c_chacha20poly1305_encrypt_final.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/lib/cifra/extr_chacha20.c_chacha20poly1305_encrypt_final.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.chacha20poly1305_context_t = type { i32 }

@PTLS_CHACHA20POLY1305_TAG_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i8*)* @chacha20poly1305_encrypt_final to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @chacha20poly1305_encrypt_final(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.chacha20poly1305_context_t*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = bitcast i32* %6 to %struct.chacha20poly1305_context_t*
  store %struct.chacha20poly1305_context_t* %7, %struct.chacha20poly1305_context_t** %5, align 8
  %8 = load %struct.chacha20poly1305_context_t*, %struct.chacha20poly1305_context_t** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = call i32 @chacha20poly1305_finalize(%struct.chacha20poly1305_context_t* %8, i8* %9)
  %11 = load %struct.chacha20poly1305_context_t*, %struct.chacha20poly1305_context_t** %5, align 8
  %12 = getelementptr inbounds %struct.chacha20poly1305_context_t, %struct.chacha20poly1305_context_t* %11, i32 0, i32 0
  %13 = call i32 @ptls_clear_memory(i32* %12, i32 4)
  %14 = load i64, i64* @PTLS_CHACHA20POLY1305_TAG_SIZE, align 8
  ret i64 %14
}

declare dso_local i32 @chacha20poly1305_finalize(%struct.chacha20poly1305_context_t*, i8*) #1

declare dso_local i32 @ptls_clear_memory(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
